--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,3 +28,6 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
+    - name: Code style check
+      run: |
+        black --check blogging mysite polling
